<resources>
    <string name="app_name">FoodDelivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Home">Home</string>
    <string name="Category">Category</string>
    <string name="Offer">Offer</string>
    <string name="profile">Profile</string>
    <string name="More">More</string>
    <string name="Profile">Profile</string>
    <string name="search_hint">Search Here </string>

    <string-array name="page_content">
    <item>In this Android tip, I am going to show you how to make screen slideshow.
        First, modify the activity_main.xml file to add a ViewPager widget.
    </item>
        <item>
        Second, create a Fragment called SlidePageFragment and its layout file called frlayout.xml.
    </item>
        <item>
        Third, Creates a class called PagerAdapter that extends the FragmentStatePagerAdapter abstract class and implements the getItem() method to supply instances of SlidePageFragment as new pages and the getCount() method which returns the number of pages the adapter will create.
    </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>