<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category"
        android:title="@string/Category" />

    <item
        android:id="@+id/navigation_offer"
        android:icon="@drawable/offer"
        android:title="@string/Offer" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/Profile" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more1"
        android:title="@string/More" />


</menu>